# ItGetsHarder

./: .gitignore  CMakeLists.txt  README.md  bruhlers  build.bash  it_gets_harder  main.cpp
.cmake/api/v1/reply/: cache-v2-907da48830fc898a467b.json  cmakeFiles-v1-f028cdbf5c1043efa409.json  codemodel-v2-42cd4da24a2660fa7a5b.json  codemodel-v2-60b94dd034fea17150aa.json  index-2023-05-11T15-50-03-0190.json  index-2023-05-12T15-09-07-0872.json  target-it_gets_harder-6280bf596ca042082e79.json  target-it_gets_harder-74e3eda7ff14eb3ad279.json
src/: Editor.cpp  Engine.h  Player.cpp  Player.h  levelOne.cpp  levelOne.h  platformer.cpp  platformer.h  utils.cpp  utils.h
