cmake_minimum_required(VERSION 3.7)
project(bruhlers)

set(CMAKE_CXX_STANDARD 17)
if(CMAKE_EXPORT_COMPILE_COMMANDS)
    set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
endif()
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_image_INCLUDE_DIRS})
find_package(SDL2_mixer REQUIRED)
add_executable(bruhlers main.cpp ./src/utils.cpp ./src/platformer.cpp)
target_link_libraries(bruhlers SDL2_mixer SDL2_ttf ${SDL2_LIBRARIES} SDL2_image::SDL2_image)
target_compile_options(bruhlers PRIVATE -Wall -Wextra -Wpedantic)
